--- a/index.html
+++ b/index.html
@@ -29,6 +29,17 @@
                 <li class="text-style"><a href="" class="nav-style"><i class="fa-solid fa-cart-shopping"></i></a></li>
             </ul>
           </nav>
+          <section class="camera-container">
+
+            <div class="camera-text">
+                <h1 class="camera-title">Start your Journey as Influencer</h1>
+                <p class="font-style">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
+                <button class="primary-btn">Preebook now <i class="fa-solid fa-arrow-right"></i></button>
+            </div>
+            <div class="camera">
+             <img src="./images/main-camera.png" alt="" class="camera-img">
+            </div>
+          </section>
     </header>
     <main>
 
