--- a/index.html
+++ b/index.html
@@ -107,7 +107,84 @@
           </section>
     </header>
     <main>
-
+       <div class="main-div">
+        <h1 class="popu">Popular Collection</h1>
+        <div class="cards">
+            <div class="card">
+                <img src="./images/tripod.png" alt="" class="card-img">
+                <h3 class="card-title">Flex Tripod</h3>
+                <h3 class="dollar">$50.48</h3>
+                <p class="star"></p>
+                <p class="des">Wordwide shifting available
+                    Buyers protection possible!</p>
+            </div>
+            <div class="card">
+                <img src="./images/mic.png" alt="" class="card-img">
+                <h3 class="card-title">  <h3 class="card-title">Microphone</h3></h3>
+                <h3 class="dollar">$120.25</h3>
+                <p class="star"></p>
+                <p class="des">Wordwide shifting available
+                    Buyers protection possible!</p>
+            </div>
+            <div class="card">
+                <img src="./images/airpod.png" alt="" class="card-img">
+                <h3 class="card-title">Airbuds</h3>
+                <h3 class="dollar">$100.00</h3>
+                <p class="star"></p>
+                <p class="des">Wordwide shifting available
+                    Buyers protection possible!</p>
+            </div>
+            <div class="card">
+                <img src="./images/drone.png" alt="" class="card-img">
+                <h3 class="card-title">Drone</h3>
+                <h3 class="dollar">$980.25</h3>
+                <p class="star"></p>
+                <p class="des">Wordwide shifting available
+                    Buyers protection possible!</p>
+            </div>
+            <div class="card">
+                <img src="./images/lights.png" alt="" class="card-img">
+                <h3 class="card-title">Light Setup</h3>
+                <h3 class="dollar">$1200.00</h3>
+                <p class="star"></p>
+                <p class="des">Wordwide shifting available
+                    Buyers protection possible!</p>
+            </div>
+            <div class="card">
+                <img src="./images/setup.png" alt="" class="card-img">
+                <h3 class="card-title">Photoshoot Setup</h3>
+                <h3 class="dollar">$820.40</h3>
+                <p class="star"></p>
+                <p class="des">Wordwide shifting available
+                    Buyers protection possible!</p>
+            </div>
+            <div class="card">
+                <img src="./images/camera.png" alt="" class="card-img">
+                <h3 class="card-title">Vlogging Camera</h3>
+                <h3 class="dollar">$1800.80</h3>
+                <p class="star"></p>
+                <p class="des">Wordwide shifting available
+                    Buyers protection possible!</p>
+            </div>
+            <div class="card">
+                <img src="./images/single-light.png" alt="" class="card-img">
+                <h3 class="card-title">Green Screen</h3>
+                <h3 class="dollar">$$25.48</h3>
+                <p class="star"></p>
+                <p class="des">Wordwide shifting available
+                    Buyers protection possible!</p>
+            </div>
+            <div class="card">
+                <img src="./images/action.png" alt="" class="card-img">
+                <h3 class="card-title">Action Camera</h3>
+                <h3 class="dollar">$380.00</h3>
+                <p class="star"></p>
+                <p class="des">Wordwide shifting available
+                    Buyers protection possible!</p>
+            </div>
+          
+        </div>
+       </div>
     </main>
     <footer>
 
