--- a/index.html
+++ b/index.html
@@ -185,6 +185,19 @@
           
         </div>
        </div>
+       <div class="interval">
+        <p class="see-more">See More <i class="fa-solid fa-arrow-right"></i></p>
+       </div>
+     <section class="last-div">
+        <div class="mechanic">
+            <img src="./images/gear.png" alt="">
+        </div>
+        <div class="fea">
+            <h1 class="fea-title">Featured products at one place</h1>
+            <p class="fea-des">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+            <button class="fea-btn">Join Now <i class="fa-solid fa-arrow-right"></i></button>
+        </div>
+     </section>
     </main>
     <footer>
 
