ready for laptop

--- a/index.html
+++ b/index.html
@@ -200,7 +200,17 @@
      </section>
     </main>
     <footer>
-
+        <div class="foot">
+            <h2 class="foot-title">Influencer products</h2>
+            <p class="foot-des">Copyright © 2020  influencer products <br>All rights reserved</p>
+            <div class="logos">
+                <div class="logo"><i class="fa-brands fa-instagram"></i></div>
+                <div class="logo"><i class="fa-solid fa-circle-xmark"></i></div>
+                <div class="logo"><i class="fa-brands fa-twitter"></i></div>
+                <div class="logo"><i class="fa-brands fa-youtube"></i></div>
+            </div>
+        </div>
+      
     </footer>
 </body>
 </html>
